plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id("org.springframework.boot") version "2.6.3"
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'kotlin-kapt'
apply plugin: 'com.android.application'

kapt {
    javacOptions {
        // These options are normally set automatically via the Hilt Gradle plugin, but we
        // set them manually to workaround a bug in the Kotlin 1.5.20
        option("-Adagger.fastInit=ENABLED")
        option("-Adagger.hilt.android.internal.disableAndroidSuperclassValidation=true")
    }
}

android {
    compileSdk 31

    sourceSets {
        test.java.srcDirs += 'src/test/kotlin'
        androidTest.java.srcDirs += 'src/androidTest/kotlin'
    }

    testOptions {
        unitTests.all {
            useJUnitPlatform()
            jvmArgs '--enable-preview'
        }
    }

    aaptOptions {
        cruncherEnabled false
    }

    defaultConfig {
        applicationId "com.example.weathermap"
        minSdk 23
        targetSdk 31
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    packagingOptions {
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/ASL2.0'
        exclude("META-INF/*.kotlin_module")
        exclude 'META-INF/web-fragment.xml'
        exclude 'META-INF/LICENSE.md'
        exclude 'META-INF/NOTICE.md'
        exclude 'META-INF/spring.schemas'
        exclude 'META-INF/spring.tooling'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'notice.txt'
        exclude 'META-INF/spring.handlers'
        exclude 'META-INF/spring-configuration-metadata.json'
        exclude 'META-INF/spring.factories'
        exclude 'license.txt'
        exclude 'META-INF/additional-spring-configuration-metadata.json'
        exclude 'META-INF/INDEX.LIST'
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    kotlinOptions {
        jvmTarget = '11'
    }
    buildFeatures{
        viewBinding true
    }
}

dependencies {
    implementation group: 'ru.redcom.lib', name: 'dadata-api-client', version: '0.0.1'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: '2.6.3'
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")

    implementation 'androidx.core:core-ktx:1.7.0'
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation 'com.google.android.gms:play-services-location:19.0.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'

    // Testing
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.platform:junit-platform-commons:1.8.2'
    testImplementation 'androidx.test.ext:junit:1.1.3'
    testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    testImplementation 'com.android.support.test:rules:1.0.2'
    testImplementation 'com.android.support.test:runner:1.0.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    //testImplementation("com.squareup.okhttp3:okhttp:4.9.0")
    //testImplementation "org.mockito:mockito-core:3.+"
    testImplementation 'org.robolectric:robolectric:4.3'
//    testImplementation 'org.robolectric:android-all:jar:Q-robolectric-5415296'




    implementation 'com.google.android.gms:play-services-location:19.0.1'
    //Gson
    //implementation 'com.google.code.gson:gson:2.8.9'

    //Retrofit
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'

    // Kotlin components
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10'
    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt'
    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt'

    // Navigation Component
    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'

    // Lifecycle components
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0"
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
}